@@ -379,3 +379,9 @@ o Changed #define in MSVC platform file to _M_X64 which is correct 64bit build m
 
 29/06/11
 o Add 64bit MSVC build configurations for GME
+
+2/10/11
+o Fixed GC root scan.
+o Increased GMTHREAD_MAXBYTESIZE to allow samples to run in 64bit
+o Fixed gmTable 64bit gmVariable equality test.
+o Fixed byte code generator. 64bit was mixing 32 and 64 bit patched addresses.
